syntax = "proto3";

option go_package = "pb";

message Port {
    string iP = 1;
    int32 privatePort = 2;
    int32 publicPort = 3;
    string type = 4;
}

message MountPoint {
    string type = 1;
    string name = 2;
    string source = 3;
    string destination = 4;
    string mode = 5;
    bool rW = 6;
}

message Container {
    string id = 1;
    string name = 2;
    string image = 3;
    string command = 4;
    int64 created = 5;
    string state = 6;
    string status = 7;
    repeated Port ports = 8;
    repeated MountPoint mounts = 9;
}

message GetContainerRequest {
    string iD = 1;
    string host = 2;
}

message GetContainerResponse {
    Container container = 1;
}

message StartContainerRequest {
    string iD = 1;
    string host = 2;
}

message StopContainerRequest {
    string iD = 1;
    string host = 2;
}

message RemoveContainerRequest {
    string iD = 1;
    string host = 2;
}

message GetLogsRequest {
    string iD = 1;
    string host = 2;
}

message ErrorStatus {
    string message = 1;
}

service ContainerService {
    rpc GetContainer (GetContainerRequest) returns (GetContainerResponse);
    rpc StartContainer (StartContainerRequest) returns (ErrorStatus);
    rpc StopContainer (StopContainerRequest) returns (ErrorStatus);
    rpc RemoveContainer (RemoveContainerRequest) returns (ErrorStatus);
    rpc GetContainerLogs (GetLogsRequest) returns (ErrorStatus);
}
